se agrego una imagen por default para las noticias que no la tengan, se arreglaron bugs en toda la app y se rehizo el componente noticia

--- a/src/App.css
+++ b/src/App.css
@@ -4,8 +4,23 @@
     padding: 2rem;
     text-align: center; */
     min-height: 100vh;
+    background-color: #212529;
 }
 
+.smaller {
+    font-size: 0.8rem;
+}
+.altura {
+    max-height: 500px;
+}
+
+.description {
+    overflow: hidden;
+    font-size: small;
+}
+.max {
+    height: 100%;
+}
 .logo {
     height: 6em;
     padding: 1.5em;
