--- a/src/index.css
+++ b/src/index.css
@@ -24,10 +24,11 @@ a:hover {
 
 body {
     /* margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
+    place-items: center;
+    min-width: 320px;
+    display: flex;
    */
+    min-height: 100vh;
 }
 
 h1 {
