--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,12 @@
 .max {
     height: 100%;
 }
+@media screen and (min-width: 768px) {
+    .medium {
+        width: 50%;
+        margin: auto;
+    }
+}
 .logo {
     height: 6em;
     padding: 1.5em;
